<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_in_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.authentication.LogInActivity">

    <EditText
        android:id="@+id/edit_text_log_in_activity_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textPassword"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_log_in_activity_email2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edit_text_log_in_activity_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_log_in_activity_email" />

    <TextView
        android:id="@+id/text_view_log_in_activity_email"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_log_in_activity_log_in" />

    <TextView
        android:id="@+id/text_view_log_in_activity_email2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_log_in_activity_email" />

    <TextView
        android:id="@+id/text_view_log_in_activity_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_log_in_activity_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_log_in_activity_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>