<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.authentication.SignUpActivity">

    <TextView
        android:id="@+id/text_view_sign_up_activity_nickname"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/nickname_not_required"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_sign_up_activity_confirm_password" />

    <Button
        android:id="@+id/button_sign_up_activity_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_sign_up_activity_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_activity_confirm_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_view_sign_up_activity_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_sign_up_activity_password" />

    <EditText
        android:id="@+id/edit_text_sign_up_activity_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_activity_email"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edit_text_sign_up_activity_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_activity_password" />

    <TextView
        android:id="@+id/text_view_sign_up_activity_email"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_signup_activity_sign_up_for_new_account" />

    <TextView
        android:id="@+id/text_view_sign_up_activity_password"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_sign_up_activity_email" />

    <TextView
        android:id="@+id/text_view_signup_activity_sign_up_for_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up_for_new_account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_sign_up_activitiy_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_activity_nickname" />
</androidx.constraintlayout.widget.ConstraintLayout>