<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verify_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.authentication.VerifyActivity">

    <EditText
        android:id="@+id/edit_text_verify_activity_verfication_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/verification_number"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_verify_activity_verification_number"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_view_verify_activity_verification_number"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/verification_number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_verify_activity_verify_new_account" />

    <Button
        android:id="@+id/button_verify_activity_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_verify_activity_verify_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/verify_new_account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>